Upgrade Maven to use java 24