@@ -24,8 +24,12 @@
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>3.8.1</version>
 				<configuration>
-					<source>1.8</source>
-					<target>1.8</target>
+				    <source>24</source>
+				    <target>24</target>
+				    <compilerArgs>
+				        <arg>--add-exports=java.desktop/com.sun.media.sound=ALL-UNNAMED</arg>
+				        <arg>--add-exports=java.desktop/sun.awt.shell=ALL-UNNAMED</arg>
+				    </compilerArgs>
 				</configuration>
 			</plugin>
 			<plugin>
